# kotlin

./: .gitignore  Dockerfile  README.md  START.md  StreamingProtocols.kt  StreamingRouter.kt  VideoProcessingPipeline.kt  WebRTCHandler.kt  build.gradle.kts  docker-compose.yml  processors.yaml  requirements.txt  routes.yaml  setup.cfg
config/: envoy.yaml  logging.yaml  processors.yaml
config/coturn/: turnserver.conf
config/envoy/: envoy.yaml
config/grpc/: server.config
config/nginx/: nginx.conf
config/pipelines/: video-pipeline.yaml
config/wss/: config.yaml
monitoring/prometheus/: prometheus.yml
proto/: ai.proto  audio.proto  common.proto  video.proto
scripts/: build.sh  generate-certs.sh  generate-protos.sh  test.sh
scripts/dev/: start_dev.sh
scripts/setup/: install.sh
scripts/test/: run_tests.sh
scripts/utils/: backup.sh
services/audio/: Dockerfile  requirements.txt
services/audio/src/: main.py
services/decoder/: Dockerfile  requirements.txt
services/decoder/src/: main.py
services/encoder/: Dockerfile
services/encoder/src/: main.py
services/motion/: Dockerfile  requirements.txt
services/motion/src/: main.py
services/object/: Dockerfile  requirements.txt
services/object/src/: main.py
services/router/: Dockerfile  requirements.txt
services/router/src/: main.py
services/scaler/: Dockerfile  requirements.txt
services/scaler/src/: main.py
video-processor/: docker-compose.yml
