# setup.cfg
[options]
python_requires = >=3.9
packages = find:

[options.extras_require]
dev =
    black==24.1.1
    isort==5.13.2
    flake8==7.0.0
    mypy==1.8.0
    pytest==7.4.4
    pytest-cov==4.1.0
    pytest-asyncio==0.23.3
    sphinx==7.1.2
    mkdocs==1.5.3

test =
    pytest==7.4.4
    pytest-asyncio==0.23.3
    pytest-cov==4.1.0
    pytest-benchmark==4.0.0
    requests==2.31.0
    httpx==0.26.0

gpu =
    torch==2.1.2
    tensorflow==2.15.0
    tensorrt==8.6.1

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=src --cov-report=term-missing

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[isort]
profile = black
multi_line_output = 3